# rss-parser

./: .env  README.md  docker-command.sh  docker-compose.yaml  pyproject.toml
config/: airflow.cfg
dags/rss/: common.py  rss_scraper_dag.py  rss_tasks.py  setup_tables.py
dags/rss/models/: RssItem.py
dags/rss/sql/pipeline/rss_scraper_dag/: get_active_sources.sql  insert_rss_item.sql
dags/rss/sql/tables/: rss_items.sql  tb_source_rss.sql
streamlit/: streamlit_ui.py
